# super-mario-motion

./: .coveragerc  .gitignore  CONTRIBUTING.md  Makefile  README.md  config.json  pyproject.toml  pytest.ini  requirements.txt  run-win.bat
data/: pose_samples_sascha_16.12.2025_11.45.csv  pose_samples_sascha_16.12.2025_11.48.csv  pose_samples_sascha_16.12.2025_11.51.csv  pose_samples_silas_01.12.2025_18.29.csv  pose_samples_silas_01.12.2025_18.32.csv  pose_samples_silas_07.12.2025_17.21.csv  pose_samples_silas_07.12.2025_17.23.csv  pose_samples_silas_07.12.2025_17.25.csv  pose_samples_silas_07.12.2025_17.28.csv  pose_samples_silas_07.12.2025_17.52.csv  pose_samples_silas_07.12.2025_17.56.csv  pose_samples_silas_07.12.2025_18.00.csv  pose_samples_silas_07.12.2025_18.03.csv  pose_samples_silas_07.12.2025_18.07.csv  pose_samples_silas_07.12.2025_18.09.csv  pose_samples_silas_10.12.2025_19.29.csv  pose_samples_silas_24.11.2025_23.05.csv  pose_samples_silas_24.11.2025_23.13.csv  pose_samples_silas_24.11.2025_23.15.csv  pose_samples_silas_24.11.2025_23.33.csv  pose_samples_silas_25.11.2025_20.32.csv  pose_samples_silas_25.11.2025_20.34.csv  pose_samples_silas_30.11.2025_18.02.csv  pose_samples_silas_30.11.2025_18.04.csv  pose_samples_silas_30.11.2025_18.07.csv  pose_samples_silas_30.11.2025_18.09.csv  pose_samples_silas_30.11.2025_18.13.csv  pose_samples_silas_30.11.2025_18.15.csv  pose_samples_timobarton_26.01.2026_19.46.csv  pose_samples_timobarton_26.01.2026_19.48.csv
docs/: conf.py  index.rst  poses_draft.xcf  progress_documentation.md  progress_documentation.tex  (+2 more)
(+110 files in other folders)
