[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "super-mario-motion"
version = "0.3.0"
description = "Pose-controlled Super Mario Motion project"
requires-python = ">=3.12.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
