[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "super-mario-motion"
version = "0.3.0"
description = "Pose-controlled Super Mario Motion project"
requires-python = ">=3.12.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 79
target-version = "py312"
fix = false

[tool.ruff.lint]
select = [
    "PLR2004",
    "RUF100",
    "F",
    "E",
    "B",
    "SIM",
    "UP",
    "RUF",
    "PL",
    "C90"
]

